--- a/12-26.Januar/content/durchfuehrung.tex
+++ b/12-26.Januar/content/durchfuehrung.tex
@@ -8,9 +8,9 @@ Anhand der Messaperatur aus Abbildung \ref{fig:Mess} sollen das Torsionsmodul be
   \label{fig:Mess}
 \end{figure}
 \subsection{Daten der Messaperatur}
-Dafür wird zunächst di Länge $L_1$ sowie $L_2$ je drei mal vermessen und der Durchmesser an verschiedenen Stellen insgesamt fünf mal. Die weiteren Daten mit den entsprechenden Messunsicherheiten werden dem Versuchsaufbau entnommen.
+Dafür wird zunächst die Länge $L_1$ sowie $L_2$ je drei mal und der Durchmesser an verschiedenen Stellen insgesamt fünf mal vermessen. Die weiteren Daten mit den entsprechenden Messunsicherheiten werden dem Versuchsaufbau entnommen.
 \subsection{Schwingungsdauer des Torsionsmodul ohne Magnetisches Moment}
-Es ist drauf zu achten das die Dipolachse des Magneten senkecht zum Erdmagnetfeld steht. Anschleißend wird der Draht am Justierrad um kleine Winkel ausgelengt so das der Lichtstrahl welcher von der Lichtquelle den Spiegel trifft aufgrund der Trosion um den Lichtdetektor pendelt (siehe Abbildung \ref{fig:Aufbau}). Um unerwünschte Pendelbewegung zu verhindern wird mittels einem Dämpfer versucht die Pendelbewegungen zu minimieren. Die Taktung des Lichtdetektors soll so geschaltet werden, dass bei dem ersten durchlauf jeweils das Zählwerk startet, beim dritten Stopt und beim vierten mal das Zählwerk zurückgestellt wird. Es werden 10 Perioden gemessen und die Werte notiert.
+Es ist drauf zu achten das die Dipolachse des Magneten senkecht zum Erdmagnetfeld steht. Anschleißend wird der Draht am Justierrad um kleine Winkel ausgelengt so das der Lichtstrahl welcher von der Lichtquelle den Spiegel trifft aufgrund der Trosion um den Lichtdetektor pendelt (siehe Abbildung \ref{fig:Aufbau}). Um unerwünschte Pendelbewegung zu verhindern wird mittels einem Dämpfer versucht die Pendelbewegungen zu minimieren. Die Taktung des Lichtdetektors soll so geschaltet werden, dass bei dem ersten Durchlauf jeweils das Zählwerk startet, beim dritten Stopt und beim vierten mal das Zählwerk zurückgestellt wird. Es werden 10 Perioden gemessen und die Werte notiert.
 \begin{figure}
   \centering
   \includegraphics[height=7cm]{picture/Aufbau.png}
