Fertig und ausgedruckt

--- a/12-26.Januar/content/auswertung.tex
+++ b/12-26.Januar/content/auswertung.tex
@@ -32,9 +32,9 @@ Die Abmessungen des Drahtes sind in der folgenden Tabelle aufgeführt.
   \label{tab:Messwerte}
 \end{table}
 
-Das Gesamtträgheitsmoment ergibt sich aus der Summation von dem Trägheitsmoment der Kugel und der Halterung.
+Das Gesamtträgheitsmoment ergibt sich aus der Summation von dem Trägheitsmoment der Kugel(siehe Gl. (\ref{eqn:theta})) und der Halterung.
 \begin{align*}
-  \theta_\text{k} & = \frac{2}{5} m_\text{k} r^2_\text{k} = (\num{1.3197 +- 0.0012}) \cdot 10^{-4} \ \text{kg m}^2 \\
+  \theta_\text{k} & = (\num{1.3197 +- 0.0012}) \cdot 10^{-4} \ \text{kg m}^2 \\
   \theta_\text{ges} & = \theta_\text{K} + \theta_\text{H} = (\num{1.3422 +- 0.0012}) \cdot 10^{-4} \ \text{kg m}^2
 \end{align*}
 
@@ -182,5 +182,5 @@ Aufgrund der Horizontalkomponente des Erdmagnetfeldes, wirkt auf den Magneten in
 
 Die Horizontalkomponente lässt sich aus Gleichung (\ref{eqn:MagMoment}) nach $B$ umgestellt bestimmen.
 \begin{equation}
-  B_\text{h} = \frac{4 \pi^2 I_\text{ges}}{m} \left(\frac{1}{T_\text{E}^2} - \frac{1}{T^2} \right) = (\num{65.0 +- 8.0}) \ \mu \text{T}
+  B_\text{h} = \frac{4 \pi^2 I_\text{ges}}{m} \left(\frac{1}{T_\text{E}^2} - \frac{1}{T^2} \right) = (\num{65.0 +- 8.0}) \ \text{µT}
 \end{equation}
