--- a/12-26.Januar/main.tex
+++ b/12-26.Januar/main.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{Versuch 102}
+\title{Drehschwingungen}
 \date{
-  Durchführung: DATUM
+  Durchführung: 26.01.16
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 03.02.16
 }
 
 \begin{document}
