--- a/12-26.Januar/lit.bib
+++ b/12-26.Januar/lit.bib
@@ -1,13 +1,13 @@
 @manual{sample,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
-  year = 2014,
-  address = {Link einfügen},
+  title = {Versuch 102: Drehschwingungen},
+  year = 2016,
+  address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V102.pdf},
 }
 
 @manual{Literatur,
-  author = { },
   title = {Horizontale Erdmagnetfeldkomponente für Dortmund},
+  month = {Februar},
   year = 2016,
   address = {http://www-app1.gfz-potsdam.de/cgi-bin/igrf.pl}
 }
