--- a/12-26.Januar/content/theorie.tex
+++ b/12-26.Januar/content/theorie.tex
@@ -78,15 +78,15 @@ wobei $p$ die Polstärke ist und $\vec{a}$ die Abstände der beiden Pole sind. A
 \end{figure}
 dass magnetische Moment $M_\text{Mag}$ zweier entgegengesetzter Kräfte. Der Betrag des magnetischen Momentes ist
 \begin{equation}
-  |M_\text{Mag}| = m B \sin(\gamma)
+  |M_\text{Mag}| = m B \sin(\gamma) \ .
   \label{eqn:MM}
 \end{equation}
-Daraus ergibt sich die nicht lineare Differentialgleichung
+Wird nun ein externes Magnetfeld hinzugeschaltet, wird die Gleichung (\ref{eqn:dgl}) mit dem zusätzlichen magnetischen Moment $M_\text{Mag}$ erweitert und es ergibt sich:
 \begin{equation}
-  mB \sin(\varphi) + D \varphi + \theta \frac{d^2 \varphi}{dt^2}
+  mB \sin(\varphi) + D \varphi + \theta \frac{d^2 \varphi}{dt^2} = 0 \ .
   \label{eqn:idgl}
 \end{equation}
-welche sich jedoch durch die Kleinwinkelnäherung $\sin \varphi \sim \varphi$ in eine homogene Umschreiben lässt. Daraus lässt sich die Schwingungsdauer
+Nun wird noch die Kleinwinkelnäherung $\sin \varphi \sim \varphi$ angewendet wodurch der sin wegfällt. Daraus lässt sich die Schwingungsdauer
 \begin{equation}
   T_\text{Mag} = 2 \pi \sqrt{\frac{\theta}{mB + D}}
   \label{eqn:Tmag}
