--- a/11-19.Januar/content/diskussion.tex
+++ b/11-19.Januar/content/diskussion.tex
@@ -1,3 +1,7 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Ein Vergleich zwischen den beiden Messmethoden ist schwierig, da beide ungefähr gleich genau sind. Lediglich der Aufwand ist nach subjektiver Beurteilung, bei einer längeren Messreihe bei der Sweepmethode kleiner, da nicht jedes mal die entsprechende Lissajourfigur gesucht werden muss. Ein Nachteil ist jedoch, dass das grobe Frequenzspektrum schon bekannt seien muss. Desweiteren muss ein Frequenzgenerator vorhaben seien welche solche Swipes generieren kann. Für die Methode mit den Lissajourfiguren ist dies nicht von Nöten und es reicht lediglich ein Funktionsgenerator und ein Zwei-Kanal-Oszilloskop.
+Ein Vergleich zwischen den beiden Messmethoden ist schwierig, da beide ungefähr gleich genau sind. Lediglich der Aufwand ist nach subjektiver Beurteilung, bei einer längeren Messreihe bei der Sweepmethode kleiner, da nicht jedes mal die entsprechende Lissajourfigur gesucht werden muss. Ein Nachteil ist jedoch, dass das grobe Frequenzspektrum schon bekannt seien muss. Desweiteren muss ein Frequenzgenerator vorhaben seien welche solche Sweeps generieren kann. Für die Methode mit den Lissajourfiguren ist dies nicht von Nöten und es reicht lediglich ein Funktionsgenerator und ein Zwei-Kanal-Oszilloskop.\\
+Desweiteren fällt auf das die experimentell bestimmte Resonansfrequenz von der theoretischen um 1 \% abweicht. Diese kleine Messunsicherheit lässt sich möglicherweise daher erklären, dass bei der Berechnung der Frequenz für ein realitischeres Ergebniss die Kapazitäten der Spulen berücksichtigt worden sind. \\
+Der Fehler bei den gemessenen Schwebungen fluktiert in Abschnitt 4.2 zwischen 3 - 30 \%. Ursache dafür könnte seien dass jeweils nur natürliche Zahlen als Maximum abgelesen wurden. Die Ablesemethode wäre zu optimieren indem bei mehreren Perioden der Mittelwert gebildet werden würde. Mit dem Aufbau können Frequenzverhältnisse zwischen 15 bis 3 Amplituden erzeugt werden.\\
+Mittels der Sweepmethode werden Messunsicherheiten zwischen 1-2 \% erreicht. Dies ist für das Praktikum eine relativ genaue Messung, obwohl beim ablesen der Resonanzfrequenzen nicht immer der Peak genau bestimmt werden konnte. \\
+Sowohl bei der Lissajous- als auch bei der Sweepmethode werden bei der Frequenz $v^+$ für die verschiedenen Kondensatoren Werte zwischen 37 - 56 kHz und für $v^-$ $\sim$ 35 kHz gemessen. 
