--- a/11-19.Januar/content/durchfuehrung.tex
+++ b/11-19.Januar/content/durchfuehrung.tex
@@ -25,11 +25,11 @@ Für eine grobe Abschätzung der Resonanzfrequenz wird die Frequenz gesucht, bei
    \label{fig:Blub}
  \end{figure}
 
-Nun wird der linke Schwingkreis mit einem Rechteckimpuls angeregt. Die Änderung des Stromes wird über den Spannungsabfall am 48 $\Omega$ Widerstand auf dem Oszilloskop sichtbar gemacht. Auf dem Oszilloskop lassen sich nun Schwebungen, wie in Abbildung \ref{fig:SchFre} dargestellt, erkennen. Nun wird das Verhältniss der Schwebungs- und der Schwingungsfrequenz bestimmt. Dafür werden die Maxima der Schwingungsfrequenz in einer Schwebung gezählt. Dies wird für unterschiedliche Koppelkondesatoren wiederholt, um ein zusammenhang zwischen dem Frequenzverhältniss und der Kapazität des Kondensators zu erkennen.
+Nun wird der linke Schwingkreis mit einem Rechteckimpuls angeregt. Die Änderung des Stromes wird über den Spannungsabfall am 48 $\Omega$ Widerstand auf dem Oszilloskop sichtbar gemacht. Auf dem Oszilloskop lassen sich nun Schwebungen, wie in Abbildung \ref{fig:SchFre} dargestellt, erkennen. Nun wird das Verhältniss der Schwebungs- und der Schwingungsfrequenz bestimmt. Dafür werden die Maxima der Schwingungsfrequenz in einer Schwebung gezählt. Dies wird für unterschiedliche Koppelkondesatoren wiederholt, um ein Zusammenhang zwischen dem Frequenzverhältniss und der Kapazität des Kondensatoren zu erkennen.
 
 \subsubsection{Bestimmung der Fundamentalfrequenzen über Lissajous-Figuren}
 Es wird die Schaltung aus dem vorherigen Versuch übernommen, allerdings wird nun eine Sinusschwingung verwendet. Außerdem wird die Generatorspannung an den X-Eingang des Oszilloskops gegeben und das Oszilloskop wird auf den XY-Betrieb gestellt, dadurch sind nun wieder Lissajous-Figuren zu erkennen. Die Frequenzen, bei denen die Lissajous-Figuren in eine Gerade übergehen, sind die Fundamentalfrequenzen.\\
 Dies wird wieder für unterschiedliche Kapazitäten des Koppelkondensators wiederholt.
 
-\subsubsection{Bestimmung der Fundamentalfrequenzen über die Sweap-Methode}
-Bei diesem Versuch wird die Schaltung aus Abbildung \ref{fig:Blub} übernommen. Allerdings wird dieses mal keine konstante Sinusschwingung verwendet, sondern eine ansteigende Sinusschwingung, ein sogenannter Sweap. Bedeutet, dass die Sinusschingung bei einer Startfrequenz anfängt und über einen Zeitraum linear bis zur Endfrequenz ansteigt. Die Start- und Endfrequenzen werden so gewählt, dass die Fundamentalfrequenzen innerhalb dieses Bereiches liegen. Das Oszilloskop wird so angeschlossen das es die Spannung an dem 48 $\Omega$ Widerstand abnimmt. Desweiteren soll das Bild nach genau einem Sweap einfrieren, damit die Zeitabstände zwischen dem Start des Sweaps und den beiden Maxima gemessen werden können. Dies geschieht mit Hilfe der Cursor-Funktion des Oszilloskops. Die Beiden Maxima stellen in diesem Fall die Fundamentalfrequenzen bzw. Resonanzfrequenzen da. Aus den Zeitabständen können nun die Fundamentalfrequenzen berechnet werden.
+\subsubsection{Bestimmung der Fundamentalfrequenzen über die Sweep-Methode}
+Bei diesem Versuch wird die Schaltung aus Abbildung \ref{fig:Blub} übernommen. Allerdings wird dieses mal keine konstante Sinusschwingung verwendet, sondern eine in der Frequenz ansteigende Sinusschwingung, ein sogenannter Sweep. Bedeutet, dass die Sinusschingung bei einer Startfrequenz anfängt und über einen Zeitraum linear bis zur Endfrequenz ansteigt. Die Start- und Endfrequenzen werden so gewählt, dass die Fundamentalfrequenzen innerhalb dieses Bereiches liegen. Das Oszilloskop wird so angeschlossen das es die Spannung an dem 48 $\Omega$ Widerstand abnimmt. Desweiteren soll das Bild nach genau einem Sweep einfrieren, damit die Zeitabstände zwischen dem Start des Sweaps und den beiden Maxima gemessen werden können. Dies geschieht mit Hilfe der Cursor-Funktion des Oszilloskops. Die Beiden Maxima stellen in diesem Fall die Fundamentalfrequenzen bzw. Resonanzfrequenzen da. Aus den Zeitabständen können nun die Fundamentalfrequenzen berechnet werden.
