--- a/11-19.Januar/lit.bib
+++ b/11-19.Januar/lit.bib
@@ -1,6 +1,6 @@
 @manual{sample,
   author = {TU Dortmund},
   title = {Versuch 355: Gekoppelte Schwingkreise},
-  year = 2014,
-  addresse = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V355.pdf},
+  url = "http://129.217.224.2/HOMEPAGE/Anleitung_AP.html",
+  note = "[4.\,Feb.\,2016]",
 }
