--- a/11-19.Januar/content/theorie.tex
+++ b/11-19.Januar/content/theorie.tex
@@ -6,7 +6,7 @@ Wenn zwei schwingende Systeme so miteinander verbunden sind, dass diese aufeinan
 Für diesen Versuch wird ein Schwingkreis verwendet, da sich bei diesem die Frequenzen und Amplituden besser bestimmen lassen, als bei zwei Fadenpendeln welche über eine Feder gekoppelt sind.
 
 \subsection{Verhalten kapazitiv gekoppelte Schwingkreise}
-Im folgenden werden zwei gleiche Schwingkreise, welche durch die Kapazität  $C_\text{K}$ gekoppelt sind, untersucht(siehe Abbildung \ref{fig:GekSch}).
+Im Folgenden werden zwei gleiche Schwingkreise, welche durch die Kapazität  $C_\text{K}$ gekoppelt sind, untersucht(siehe Abbildung \ref{fig:GekSch}).
 
 \begin{figure}[H] %gekoppelter Schwingkreis
 	\centering
@@ -15,17 +15,7 @@ Im folgenden werden zwei gleiche Schwingkreise, welche durch die Kapazität  $C_
 	\label{fig:GekSch}
 \end{figure}
 
-Der Schwingkreis liegt den Kirchhoffschen Regeln zu Grunde. Die erste der beiden Regeln besagt, dass die Summe der eingehenden und ausgehende Ströme an einem Knoten gleich Null ist.
-\begin{equation}
-  \text{Knotenregel} : \sum_{\text{k=1}}^\text{n} I_\text{k} = 0
-  \label{eqn:K1}
-\end{equation}
-Die zweite Regel besagt, dass sich bei einer Geschlossenen Masche alle Teilspannungen, bei einem Umlauf zu Null addieren.
-\begin{equation}
-  \text{Maschenregel} : \sum_{\text{k=1}}^\text{n} U_\text{k} = 0 \ .
-  \label{eqn:K2}
-\end{equation}
-Damit ergibt sich für beide Maschen
+Der Schwingkreis liegt den Kirchhoffschen Regeln zu Grunde.Damit ergibt sich für beide Maschen
 \begin{equation}
 	U_\text{C} + U_\text{L} + U_\text{K} = 0 \ ,
 \end{equation}
@@ -51,7 +41,7 @@ und
 	L \ddot{I}_2 + \frac{1}{C} I_2 + \frac{1}{C_\text{K}}(I_1 - I_2) = 0 \ .
 	\label{eqn:Masche2}
 \end{equation}
-Um die beiden Differentialgleichungssysteme zu lösen werden neue Variablen eingeführt und zwar Summe und Differenz der Einzelströme. Damit ergeben sich aus 	\ref{eqn:Masche1} und \ref{eqn:Masche2}
+Um die beiden Differentialgleichungssysteme zu lösen werden neue Variablen eingeführt und zwar Summe und Differenz der Einzelströme. Damit ergeben sich aus 	(\ref{eqn:Masche1}) und (\ref{eqn:Masche2})
 \begin{equation}
 	L \frac{d^2}{d t^2}(I_1 + I_2) + \frac{1}{C}(I_1 + I_2) = 0
 	\label{eqn:DGL1}
@@ -61,7 +51,7 @@ und
 	L \frac{d^2}{d t^2}(I_1 - I_2) + \left(\frac{1}{C} + \frac{2}{C_\text{K}} \right)(I_1 - I_2) = 0 \ .
 	\label{eqn:DGL2}
 \end{equation}
-Die Lösung von \ref{eqn:DGL1} ist
+Die Lösung von (\ref{eqn:DGL1}) ist
 \begin{equation}
 	(I_1 + I_2)(t) = (I_{1_0} + I_{2_0}) \cos \left(\frac{t}{\sqrt{LC}} \right) \ ,
 \end{equation}
@@ -70,7 +60,7 @@ mit der Schwingungsfrequenz
 	\nu^+ = \frac{1}{2 \pi \sqrt{LC}} \ .
 	\label{eqn:vp}
 \end{equation}
-Die Lösung von \ref{eqn:DGL2} ist
+Die Lösung von (\ref{eqn:DGL2}) ist
 \begin{equation}
 	(I_1 - I_2)(t) = (I_{1_0} - I_{2_0}) \cos \left(\frac{t}{\sqrt{L \left(\frac{1}{C} + \frac{2}{C_\text{K}} \right)^{-1}}} \right) \ ,
 \end{equation}
@@ -91,9 +81,9 @@ und
 \end{equation}
 An dieser Stelle werden nun zwei Spezialfälle des gekoppelten Systems betrachtet. \\
 \textbf{erster Spezialfall:} \ ($I_{1_0} = I_{2_0}$) \\
-Wenn zu Beginn des Versuches die Schwingkreise gleich stark und in Phase ausgelenkt werden, fällt in den Gleichungen \ref{eqn:I1} und \ref{eqn:I2} jeweils die Differenzschwingung raus. Das heißt beide Systeme schwingen mit der Frequenz $\nu^+$ und es liegt zu keinem Zeitpunkt eine Spannung an dem Koppelkondensator an. \\
+Wenn zu Beginn des Versuches die Schwingkreise gleich stark und in Phase ausgelenkt werden, fällt in den Gleichungen (\ref{eqn:I1}) und (\ref{eqn:I2}) jeweils die Differenzschwingung raus. Das heißt beide Systeme schwingen mit der Frequenz $\nu^+$ und es liegt zu keinem Zeitpunkt eine Spannung an dem Koppelkondensator an. \\
 \textbf{zweiter Spezialfall:} \ ($I_{1_0} = -I_{2_0}$) \\
-Wenn zu Beginn des Versuches die Schwingkreise gleichstark und mit entgegengesetzter Phase ausgelenkt werden, fällt in den Gleichungen \ref{eqn:I1} und \ref{eqn:I2} jeweils die Summenschwingung raus. Das heißt beide Systeme schwingen mit der Frequenz $\nu^-$ und es liegt die maximale Spannung an dem Koppelkondensator an. \\
+Wenn zu Beginn des Versuches die Schwingkreise gleichstark und mit entgegengesetzter Phase ausgelenkt werden, fällt in den Gleichungen (\ref{eqn:I1}) und (\ref{eqn:I2}) jeweils die Summenschwingung raus. Das heißt beide Systeme schwingen mit der Frequenz $\nu^-$ und es liegt die maximale Spannung an dem Koppelkondensator an. \\
 Die beiden Speziallfälle werden auch als Fundamentalschwingungen des gekoppelten Systems bezeichnet.\\
 \\
 Wird hingegen nur einer der Schwingkreise ausgelenkt ($I_{2_0} = 0$ oder $I_{1_0} = 0$) folgt:
@@ -116,7 +106,7 @@ Die Amplitude des Schwingung ändert sich mit der Schwebungsfrequnez $\nu^- - \n
 \begin{equation*}
 	\frac{\nu^+ + \nu^-}{2} \approx \nu^+
 \end{equation*}
-schwingt.
+schwingt. Diese Näherung darf angenommen werden da $\nu^+$ und $\nu^-$ ähnlich groß sind.
 
 \subsection{Abhängigkeit des Stromes von der Frequenz}
 Wenn einer der Schwingkreise von einer angelegten Sinusspannung angeregt wird(siehe Abb. \ref{fig:AngSch}),
@@ -152,7 +142,7 @@ Nach Trennung in Real- und Imaginärteil erhält man für $|I_2|$ mit der Abkür
 		|I_2| = |U| \frac{1}{\sqrt{4 \omega^2 C^2_\text{K} R^2 Z(\omega)^2 + \left(\frac{1}{\omega C_\text{K}} - \omega C_\text{K} Z(\omega)^2 + \omega R^2 C_\text{K} \right)^2}} := |U| \cdot |\pmb{\varrho}|
 		\label{eqn:BetragI}
 \end{equation}
-An der Gleichung \ref{eqn:BetragI} wird deutlich, dass $|I_2|$ für $\omega \to 0$ und für $\omega \to \infty$ gegen null geht und bei den Frequenzen $\omega^+$ und $\omega^-$ seine Maxima besitzt.
+An der Gleichung (\ref{eqn:BetragI}) wird deutlich, dass $|I_2|$ für $\omega \to 0$ und für $\omega \to \infty$ gegen null geht und bei den Frequenzen $\omega^+$ und $\omega^-$ seine Maxima besitzt.
 \begin{equation}
 	|\pmb{\varrho}(\omega^+)| = \frac{1}{R \sqrt{4 + \frac{R^2 C^2_\text{K}}{LC}}}
 \end{equation}
@@ -161,6 +151,12 @@ An der Gleichung \ref{eqn:BetragI} wird deutlich, dass $|I_2|$ für $\omega \to 
 \end{equation}
 Im folgenden wird $|\pmb{\varrho}(\omega^{+/-})|$ zu $\frac{1}{2R}$ genähert.
 
+\subsection{Beepmethode}
+Aus einer Startfrequenz $\nu_\text{Start}$ und der Endfrequenz $\nu_\text{End}$ ermittelt sich die Frequenz zum Zeitpunkt t durch die Formel 
+\begin{equation}
+  \nu(t) = \nu_\text{Start} + t \frac{\nu_\text{End}}{\nu_\text{Start}} \ .
+  \label{eqn:nut}
+\end{equation}
 \subsection{Fehlerrechnung}
 Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
 \subsubsection{Mittelwert}
@@ -175,24 +171,4 @@ berechnen. Die Standardabweichung des Mittelwertes beträgt
 	\label{eqn:std}
 \end{equation}
 
-\subsubsection{Gauß'sche Fehlerfortpflanzung}
-Wenn $x_\text{1}, ..., x_\text{n}$ fehlerbehaftete Messgrößen im weiteren Verlauf benutzt werden, wird der neue Fehler $\Delta f$ mit Hilfe der Gaußschen Fehlerfortpflanzung angegeben.
-\begin{equation}
-	\Delta f = \sqrt{\sum_{\text{k}=1}^\text{N} \left( \frac{ \partial f}{\partial x_\text{k}} \right) ^2 \cdot (\Delta x_\text{k})^2}
-	\label{eqn:var}
-\end{equation}
 
-\subsubsection{Lineare Regression}
-Die Steigung und y-Achsenabschnitt einer Ausgleichsgeraden werden gegebenfalls mittels Linearen Regression berechnet.
-\begin{equation}
-	y = m \cdot x + b
-	\label{eqn:reg}
-\end{equation}
-\begin{equation}
-	m = \frac{ \overline{xy} - \overline{x} \overline{y} } {\overline{x^2} - \overline{x}^2}
-	\label{eqn:reg_m}
-\end{equation}
-\begin{equation}
-	b = \frac{ \overline{x^2}\overline{y} - \overline{x} \, \overline{xy}} { \overline{x^2} - \overline{x}^2}
-	\label{eqn:reg_b}
-\end{equation}
