--- a/13-19.April/content/auswertung.tex
+++ b/13-19.April/content/auswertung.tex
@@ -1,3 +1,76 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
+Der zu Beginn ausgemessene Abstand $L$ von dem Spalt zu der Messdiode und die Wellenlänge des verwendeten Lasers lauten:
+\begin{align*}
+  L &= 0.93 \ \text{m} \\
+  \lambda &= 633 \cdot 10^{-9} \ \text{m}
+\end{align*}
+Alle Messwerte zur Bestimmung der Spaltgrößen $b$, über das Interferenzmuster, befinden sich in Tabelle \ref{tab:b1} bis \ref{tab:b4}. Der gemessene Dunkelstrom beträgt,
+\begin{align*}
+  I_\text{D} = 0.1 \cdot 10^{-9} \ \text{A}
+\end{align*}
+und wird für alle Messungen als konstant angesehen. Mithilfe der Messwerte und Gleichung (\ref{eqn:I}) für die Einzelspalte und mit Gleichung (\ref{eqn:Id}) für den Doppelspalt wird eine Ausgleichsrechnung durchgeführt. Der Winkel wird als $\Phi \approx \frac{x}{L}$ angenommen. Da in beiden Gleichungen durch $\sin(\frac{x}{L})$ geteilt wird, muss der Wert $x = 0$ aus der Ausgleichsrechnung entfernt werden.
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{c c}
+    \toprule
+    a / mm & I / m A \\
+    \midrule
+  -25	& 0.00062 \\
+  -24	& 0.00058 \\
+  -23	& 0.00046 \\
+  -22	& 0.00032 \\
+  -21	& 0.00028 \\
+  -20	& 0.00038 \\
+  -19	& 0.00092 \\
+  -18	& 0.00130 \\
+  -17	& 0.00180 \\
+  -16	& 0.00225 \\
+  -15	& 0.00225 \\
+  -14	& 0.00175 \\
+  -13	& 0.00110 \\
+  -12	& 0.00060 \\
+  -11	& 0.00075 \\
+  -10	& 0.00200 \\
+  -9	& 0.00600 \\
+  -8	& 0.01250 \\
+  -7	& 0.02200 \\
+  -6	& 0.03600 \\
+  -5	& 0.05400 \\
+  -4	& 0.07200 \\
+  -3	& 0.08800 \\
+  -2	& 0.09000 \\
+  -1	& 0.10000 \\
+  0	  & 0.12500 \\
+  1	  & 0.10000 \\
+  2	  & 0.10000 \\
+  3	  & 0.09000 \\
+  4	  & 0.07400 \\
+  5	  & 0.05600 \\
+  6	  & 0.04000 \\
+  7	  & 0.02400 \\
+  8	  & 0.01200 \\
+  9	  & 0.00750 \\
+  10	& 0.00300 \\
+  11	& 0.00150 \\
+  12	& 0.00140 \\
+  13	& 0.00225 \\
+  14	& 0.00260 \\
+  15	& 0.00340 \\
+  16	& 0.00340 \\
+  17	& 0.00280 \\
+  18	& 0.00200 \\
+  19	& 0.00175 \\
+  20	& 0.00125 \\
+  21	& 0.00100 \\
+  22	& 0.00075 \\
+  23	& 0.00090 \\
+  24	& 0.00100 \\
+  25	& 0.00100 \\
+    \bottomrule
+  \end{tabular}
+  \caption{}
+  \label{tab:}
+\end{table}
