--- a/13-19.April/content/theorie.tex
+++ b/13-19.April/content/theorie.tex
@@ -7,7 +7,7 @@ Zur Beugung von Licht kommt es, wenn die Abmessung des Hinderniss in der Größe
   \caption{Frauenhofer Beugung}
   \label{fig:Fra}
 \end{figure}
-Anhand des Huygensschen Prinzip lässt sich bei hinreichend großer Intensität die Interferenzbeschreibung beschreiben. Es besagt einerseits, dass jeder Punkt einer Wellenfront Ausgangspunkt einer neuen Kugelwelle ist, als auch dass die Einhüllende der Elementarwellen die neue Wellenfront ergibt. Um eine Aussage in einenm Punkt zu machen, müssen aufgrund des Huygensschen Prinzip alle Wellen die in diesem Punkt ankommen überlagtert werden. Der einfacherheit halber wird zunächst ein Doppelspalt betrachtet und anschließend auf andere Querschnitte geschlossen. Beim Einzelspalt müssen dafür die einzelnen Strahlennündel  unter dem entsprechenden Ablenkungswinkel $\phi$ summiert werden.
+Anhand des Huygensschen Prinzip lässt sich bei hinreichend großer Intensität die Interferenzbeschreibung beschreiben. Es besagt einerseits, dass jeder Punkt einer Wellenfront Ausgangspunkt einer neuen Kugelwelle ist, als auch dass die Einhüllende der Elementarwellen die neue Wellenfront ergibt. Um eine Aussage in einenm Punkt zu machen, müssen aufgrund des Huygensschen Prinzip alle Wellen die in diesem Punkt ankommen überlagtert werden. Der einfacherheit halber wird zunächst ein Einzelspalt betrachtet und anschließend auf andere Querschnitte geschlossen. Beim Einzelspalt müssen dafür die einzelnen Amplituden eines Strahlenbündel  unter dem entsprechenden Ablenkungswinkel $\phi$ summiert werden.
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/doppelspalt.png}
