--- a/13-19.April/content/auswertung.tex
+++ b/13-19.April/content/auswertung.tex
@@ -12,11 +12,7 @@ Alle Messwerte zur Bestimmung der Spaltgrößen $b$, über das Interferenzmuster
 \end{align*}
 und wird für alle Messungen als konstant angesehen. Die Gleichungen (\ref{eqn:I}) und (\ref{eqn:Id}) werden jeweils nach $b$ umgestellt und Mithilfe der Messwerte aus Tabelle (\ref{tab:Spalt}) und einer Ausgleichsrechnung wird $b$ bestimmt. Der Winkel wird als $\Phi \approx \frac{x}{L}$ angenommen.
 \begin{equation}
-  \text{Gleichung (\ref{eqn:I})}: b = \frac{\lambda}{\pi \cdot \sin\left(\frac{x}{L}\right)} \cdot \arcsin\left(\sqrt{I} \cdot \frac{\pi \cdot \sin\left(\frac{x}{L}\right)}{\lambda}\right)
-\end{equation}
-und
-\begin{equation}
-  \text{Gleichung (\ref{eqn:Id})}: b = \frac{\lambda}{\pi \cdot \sin\left(\frac{x}{L}\right)} \cdot \arcsin\left(\sqrt{I} \cdot \frac{\pi \cdot \sin\left(\frac{x}{L}\right)}{\lambda}\right)
+  \text{Gleichung (\ref{eqn:I})}: b = \frac{\lambda}{\pi \cdot \sin\left(\frac{x}{L}\right)} \cdot \arcsin\left(\sqrt{I} \cdot \frac{\pi \cdot \sin\left(\frac{x}{L}\right)}{\lambda}\right) \ .
 \end{equation}
 Da in beiden Gleichungen durch $\sin\left(\frac{x}{L} \right)$ geteilt wird, muss der Wert $x = 0$ aus der Ausgleichsrechnung entfernt werden.
 
