--- a/13-19.April/content/diskussion.tex
+++ b/13-19.April/content/diskussion.tex
@@ -1,2 +1,3 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Wie bereits an den Graphen aus Abbildung (\ref{fig:Einezl1}) bis (\ref{fig:Doppel}) zu erkennen ist, wird die Funktion nicht richtig gefittet. Dadurch kommt es auch zu den starken Abweichungen von den Herstellerangaben. Die starken Abweichungen sind allerdings nicht durch Messfehler zu begründen.
