--- a/13-19.April/content/theorie.tex
+++ b/13-19.April/content/theorie.tex
@@ -1,13 +1,13 @@
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Zur Beugung von Licht kommt es, wenn die Abmessung des Hinderniss in der Größenordung der Wellenlänge $\lambda$ liegt. Dabei kommt es zur Abweichung des Lichtes von der Geometrischen Optik. Für den Versuch wird angenommen das der Schirm eine weite Entfernung zur  Blende aufweist, so dass die Frauenhofer-Näherung genutzt werden kann. In Abbildung \ref{fig:Fra} ist zu sehen das das Licht jeweils um den Winkel $\phi$ gebeugt wird.
+Zur Beugung von Licht kommt es, wenn die Abmessung des Hindernisses in der Größenordung der Wellenlänge $\lambda$, des Lichts, liegt. Dabei kommt es zur Abweichung des Lichtes von der Geometrischen Optik. Für den Versuch wird angenommen, dass der Schirm sehr weit von der Blende entfernt ist, so dass die Fraunhofer-Näherung genutzt werden kann. In Abbildung \ref{fig:Fra} ist zu sehen, dass das Licht jeweils um den Winkel $\phi$ gebeugt wird.
 \begin{figure}
   \centering
   \includegraphics[height=6cm]{picture/Frauenhofer.png}
   \caption{Frauenhofer Beugung}
   \label{fig:Fra}
 \end{figure}
-Anhand des Huygensschen Prinzip lässt sich bei hinreichend großer Intensität die Interferenzbeschreibung beschreiben. Es besagt einerseits, dass jeder Punkt einer Wellenfront Ausgangspunkt einer neuen Kugelwelle ist, als auch dass die Einhüllende der Elementarwellen die neue Wellenfront ergibt. Um eine Aussage in einenm Punkt zu machen, müssen aufgrund des Huygensschen Prinzip alle Wellen die in diesem Punkt ankommen überlagtert werden. Der einfacherheit halber wird zunächst ein Einzelspalt betrachtet und anschließend auf andere Querschnitte geschlossen. Beim Einzelspalt müssen dafür die einzelnen Amplituden eines Strahlenbündel  unter dem entsprechenden Ablenkungswinkel $\phi$ summiert werden.
+Anhand des Huygensschen Prinzip lässt sich bei hinreichend großer Intensität die Interferenz beschreiben. Es besagt einerseits, dass jeder Punkt einer Wellenfront Ausgangspunkt einer neuen Kugelwelle ist und andererseits, dass die Einhüllende der Elementarwellen die neue Wellenfront ergibt. Um eine Aussage in einenm Punkt zu machen, müssen aufgrund des Huygensschen Prinzip alle Wellen die in diesem Punkt ankommen überlagert werden. Der einfacherheit halber wird zunächst ein Einzelspalt betrachtet und anschließend auf andere Querschnitte geschlossen. Beim Einzelspalt müssen dafür die einzelnen Amplituden eines Strahlenbündels unter dem entsprechenden Ablenkungswinkel $\phi$ summiert werden.
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/doppelspalt.png}
@@ -19,22 +19,22 @@ Es wird eine ebene Welle mit der Feldstärke
   A(z,t)= A_0 \textbf{exp} \left( i \left( \omega t - \frac{2 \pi z}{\lambda}   \right) \right)
   \label{eqn:welle}
 \end{equation}
-angenommen die durch den Spalt mit Breite $b$ einfällt. Der Phasenunteschied zweier Strahlen mit dem Abstand $x$ beträgt:
+angenommen die durch den Spalt mit Breite $b$ einfällt. Der Phasenunteschied zweier Strahlen, mit dem Abstand $x$ beträgt:
 \begin{equation}
   \delta = \frac{2 \pi x sin(\phi)}{\lambda}
   \label{eqn:phase}
 \end{equation}
-Durch Integration über alle Strahlen die um den Winkel $\phi$ abgelengt sind ergibt sich:
+Durch Integration über alle Strahlen die um den Winkel $\phi$ abgelenkt sind ergibt sich:
 \begin{equation}
   B(z,t,\phi) = A_0 \textbf{exp} \left( i \left( \omega t - \frac{2 \pi z}{\lambda} \right) \right) \cdot \textbf{exp} \left( \frac{\pi b sin(\phi)}{\lambda} \right)
   \label{}
 \end{equation}
-Für die experimentelle Auswertung müssen die Exponentialfunktionen nicht weiter betrachtet werden, da diese ausschließlich Informationen über die Phase der Funktion enthalten. Da aufgrund der hohen Lichtfrequenz eine Messung der Amplitude nicht möglich ist muss die Intensitätsverteilung  ermittelt werden.
+Für die experimentelle Auswertung müssen die Exponentialfunktionen nicht weiter betrachtet werden, da diese ausschließlich Informationen über die Phase der Funktion enthalten. Da aufgrund der hohen Lichtfrequenz eine Messung der Amplitude nicht möglich ist muss die Intensitätsverteilung ermittelt werden.
 \begin{equation}
   I(\phi) \propto B(\phi)^2 = A_0^2 b^2 \left( \frac{\lambda}{\pi b sin \phi} \right)^2 sin^2 \left( \frac{\pi b sin \phi}{\lambda} \right)
   \label{eqn:I}
 \end{equation}
-Die Intensitätsverteilung des $I(\phi)$ des Doppelspalts beruht darauf das im Abstand $s$ ein zweiter Einzelspalt der Breite $b$ überlagert wird.
+Die Intensitätsverteilung $I(\phi)$ des Doppelspalts beruht darauf, das im Abstand $s$ ein zweiter Einzelspalt der Breite $b$ überlagert wird.
 \begin{equation}
   I(\phi) \propto B(\phi)^2 = 4cos^2\left( \frac{\pi s sin(\phi)}{\lambda} \right) \left( \frac{\lambda}{\pi b sin \phi} \right)^2 sin^2 \left( \frac{\pi b sin \phi}{\lambda} \right)
   \label{eqn:Id}
