--- a/14-26.April/main.tex
+++ b/14-26.April/main.tex
@@ -16,6 +16,7 @@
 \newpage
 
 \input{content/theorie.tex}
+\input{content/Fehlerrechnung.tex}
 \input{content/durchfuehrung.tex}
 \input{content/auswertung.tex}
 \input{content/diskussion.tex}
