--- a/14-26.April/content/durchfuehrung.tex
+++ b/14-26.April/content/durchfuehrung.tex
@@ -1,2 +1,12 @@
 \section{Durchführung und Aufbau}
 \label{sec:Durchführung}
+
+\subsection{Aufbau und Durchführung um das Abbildungsgesetz und die Linsengleichung zu verifizieren}
+Dazu wird eine optische Bank aufgestellt, an deren einem Ende sich eine Halogenlampe befindet und am anderen Ende ein Schirm. Dazwischen wird ein Gegenstand "Perl L" und eine Sammellinse mit bekannter Brennweite $f$ positioniert. Nun wird bei gegebener Gegenstandsweite $g$, die Position des Schirms so lange variiert bis das Bild scharf abgebildet wird und die Wertepaare ($g_\text{i}, b_\text{i}$) werden notiert. Diese Messung wird für mindestens 9 weitere Gegenstandsweiten wiederholt. Dann werden alle Wertepaare in ein Koordinatensystem eingezeichnet und der Punkt $A$ in dem sich die Geraden schneiden stellt die Brennweite $f$ der Linse dar.
+
+\subsection{Bestimmung der Brennweite einer Linse nach der Methode von Bessel}
+Dazu werden der Schirm und der Gegenstand im Abstand $e$ voneinander aufgestellt und die Linse dazwischen positioniert. Nun wird die Linse vom Gegenstand in Richtung des Schirms bewegt, bis das Bild scharf abgebildet wird und es werden $g_1$ und $b_1$ notiert. Danach wird die Linse weiter in Richtung des Schirms bewegt, bis das Bild ein weiteres mal scharf abgebildet wird und es werden $g_2$ und $b_2$ notiert. Dieses Verfahren wird für 9 weitere Abstände $e$ wiederholt. \\
+Um die chromatische Abberation zu untersuchen, werden für jeweils 5 Abstände $e$, ein roter und ein blauer Filter vor den Gegenstand gesetzt und analog zu dem oberen Verfahren vorgegangen werden.
+
+\subsection{Bestimmung der Brennweite eines Linsensystems nach Abbe}
+Dazu werden auf der optischen Bank der Gegenstand, eine Zerstreuungslinse, eine Sammellinse und der Schirm in eben dieser Reihenfolge aufgebaut. Der Abstand zwischen den beiden Linsen muss für die gesamte Messung konstant gehalten werden. Nun wird das Linsensystem verschoben bis ein scharfes Bild auf dem Schirm zu erkennen ist und die Bild- und Gegenstandsweiten $b'$ und $g'$ werden zu einem Referenzpunkt $A$ gemessen. Hier wird der Referenzpunkt $A$ auf die Mittelebene der Sammellinse gelegt. Zusätzlich werden die Bild- und Gegenstandgrößen $B$ und $G$ gemessen. Diese Messung wird für 9 weitere Gegenstandsweiten durchgeführt.
